--- a/ConverseStore_Java6/src/main/resources/application.properties
+++ b/ConverseStore_Java6/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=conversejava6;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=123
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto = none
 logging.level.root=warn
