[JAVA - HTML] - Remember when tick to checkbox, Save Session when user login done

--- a/ConverseStore_Java6/src/main/resources/application.properties
+++ b/ConverseStore_Java6/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.jpa.open-in-view=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto = none
 logging.level.root=warn
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nihvpc04493@fpt.edu.vn
+spring.mail.password=kcmdxqqbzufcbbts
+spring.mail.properties.mail.smpt.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
