[JAVA - HTML - XML] - Login with Google

--- a/ConverseStore_Java6/src/main/resources/application.properties
+++ b/ConverseStore_Java6/src/main/resources/application.properties
@@ -13,3 +13,14 @@ spring.mail.username=nihvpc04493@fpt.edu.vn
 spring.mail.password=kcmdxqqbzufcbbts
 spring.mail.properties.mail.smpt.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+# Cấu hình Facebook
+spring.security.oauth2.client.registration.facebook.client-id=your-facebook-client-id
+spring.security.oauth2.client.registration.facebook.client-secret=your-facebook-client-secret
+
+
+# Cấu hình Google
+spring.security.oauth2.client.registration.google.client-id=289203289167-5i9bsurobak0ilu7mricb6itlnt81cs9.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+
