[ECLIPSE] File word, hiển thị sản phẩm
- Chỉnh sửa file word phần giao diện, sql
- Hiển thị sản phẩm đang hoạt động lên trang người dùng
- Hiển thị size, màu, thương hiệu, danh mục đang hoạt động lên trang người dùng

--- a/ConverseStore_Java6/src/main/resources/application.properties
+++ b/ConverseStore_Java6/src/main/resources/application.properties
@@ -15,9 +15,9 @@ spring.mail.properties.mail.smpt.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-# Cấu hình Facebook
-spring.security.oauth2.client.registration.facebook.client-id=your-facebook-client-id
-spring.security.oauth2.client.registration.facebook.client-secret=your-facebook-client-secret
+#Facebook
+spring.security.oauth2.client.registration.facebook.client-id=1325859075031440
+spring.security.oauth2.client.registration.facebook.client-secret=9932cfafaaf9c3b8825b7668c60ad94f
 
 
 # Cấu hình Google
