[ECLIPSE] Cập nhật đăng nhập fb

--- a/ConverseStore_Java6/src/main/resources/application.properties
+++ b/ConverseStore_Java6/src/main/resources/application.properties
@@ -15,9 +15,8 @@ spring.mail.properties.mail.smpt.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-#Facebook
-spring.security.oauth2.client.registration.facebook.client-id=1325859075031440
-spring.security.oauth2.client.registration.facebook.client-secret=9932cfafaaf9c3b8825b7668c60ad94f
+spring.security.oauth2.client.registration.facebook.client-id =550978957102941
+spring.security.oauth2.client.registration.facebook.client-secret=5b481a37d0e86603417c8c8f0436289e
 
 
 # Cấu hình Google
